--- a/visiobot-project/visiobot-frontend/index.html
+++ b/visiobot-project/visiobot-frontend/index.html
@@ -366,7 +366,7 @@ button:active {
             let chatbox = document.getElementById("chatbox");
     
             if (feedback.toLowerCase() === "yes") {
-                chatbox.innerHTML += `<p class="bot-message">✅ Great! Proceeding with the selected visualization.</p>`;
+                chatbox.innerHTML += `<p class="bot-message">Great! Proceeding with the selected visualization.</p>`;
                 scrollToBottom();
                 waitingForFeedback = false;
                 try {
