--- a/visiobot-project/visiobot-frontend/index.html
+++ b/visiobot-project/visiobot-frontend/index.html
@@ -380,7 +380,7 @@ button:active {
     
             if (!audience) {
                 audience = userInput;
-                chatbox.innerHTML += `<p class="bot-message">Processing your data... Generating visualization now.</p>`;
+                chatbox.innerHTML += `<p class="bot-message">Processing your data... Generating a visualization recommendation now.</p>`;
                 scrollToBottom();
 
 
