--- a/visiobot-project/visiobot-frontend/index.html
+++ b/visiobot-project/visiobot-frontend/index.html
@@ -457,12 +457,12 @@
     downloadBtn.onclick = function() {
       forceDownloadImage(plotUrl, safeFilename);
     };
-    downloadBtn.innerHTML = 
+    downloadBtn.innerHTML = `
       <svg viewBox="0 0 24 24">
         <path d="M19 9h-4V3H9v6H5l7 7 7-7z" />
         <path d="M5 18h14v2H5z" />
       </svg>
-    ;
+    `;
     container.appendChild(downloadBtn);
 
     chatbox.appendChild(container);
